# RaPLT

./: .gitignore
.github/workflows/: ci.yml
include/: raplt_core.h  raplt_elf.h  raplt_mremap.h  raplt_signal.h  raplt_util.h
src/: raplt_cfi.c  raplt_core.c  raplt_elf.c  raplt_jni.c  raplt_mremap.c  raplt_signal.c  raplt_util.c
tests/: Makefile  run_tests.sh  test_fixture.c  test_got_patch.c  test_hook  test_region  test_signal_safety.c
tests/app/app/: build.gradle.kts
tests/app/app/src/main/: AndroidManifest.xml
tests/app/app/src/main/cpp/: CMakeLists.txt  jni_bridge.c  target.c
tests/app/app/src/main/java/com/raplt/test/: MainActivity.java
tests/avd/: build.sh  settings.gradle.kts
tests/avd/app/: build.gradle.kts
tests/avd/app/src/main/: AndroidManifest.xml
tests/avd/app/src/main/cpp/: CMakeLists.txt  test_jni.c  test_target.c
tests/avd/app/src/main/java/com/raplt/test/: MainActivity.java
tests/avd/jni/: Android.mk  Application.mk  test_raplt.c
